@@ -2,6 +2,7 @@
 
 # chilli - ChilliSpot.org. A Wireless LAN Access Point Controller
 # Copyright (C) 2003, 2004 Mondru AB.
+# Copyright (C) 2006-2007 David Bird <david@coova.com>
 #
 # The contents of this file may be used under the terms of the GNU
 # General Public License Version 2, provided that the above copyright
